# wrp-python

./: .gitattributes  .gitignore  AUTHORS  LICENSE  MANIFEST.in  NOTICE  README.md  TRADEMARKS.md  pyproject.toml
examples/: ai_engineer_server.py
tests/: conftest.py
tests/unit/server/: test_routing.py  test_server_session.py
tests/unit/shared/: test_base_session.py
wrp/: __init__.py  errors.py  types.py
wrp/client/: auth.py  session.py  streamable_http.py
wrp/server/: __init__.py  elicitation.py  models.py  session.py  sse.py  stdio.py
wrp/server/auth/: routes.py
wrp/server/lowlevel/: __init__.py  server.py
wrp/server/middleware/: header_compat.py
wrp/server/runtime/: __init__.py  exceptions.py  limits.py  server.py  system_events.py
wrp/server/runtime/conversations/: __init__.py  assembler.py  seeding.py  service.py  types.py
wrp/server/runtime/conversations/privacy/: __init__.py  guards.py  policy.py  redaction.py
wrp/server/runtime/resources/: __init__.py  base.py  resource_manager.py  templates.py  types.py
wrp/server/runtime/runs/: __init__.py  bindings.py  types.py
wrp/server/runtime/runs/requests/: __init__.py  options.py
wrp/server/runtime/settings/: __init__.py  bootstrap.py
wrp/server/runtime/settings/agents/: __init__.py  registry.py  settings.py
wrp/server/runtime/settings/providers/: __init__.py  builtin.py  registry.py  settings.py
wrp/server/runtime/settings/workflows/: __init__.py  settings.py
wrp/server/runtime/store/: __init__.py  base.py
wrp/server/runtime/store/codecs/: __init__.py  crypto.py  envelope_codec.py  serializer.py
wrp/server/runtime/store/dao/: __init__.py  agent_settings_dao.py  conversations_dao.py  provider_settings_dao.py  runs_dao.py  span_payloads_dao.py  spans_dao.py  system_sessions_dao.py  telemetry_dao.py  workflow_settings_dao.py
wrp/server/runtime/store/engines/: __init__.py  engine.py  postgres_engine.py  sqlite_engine.py
wrp/server/runtime/store/ops/: __init__.py  health.py  migrations.py
wrp/server/runtime/store/sql/: __init__.py
wrp/server/runtime/store/stores/: __init__.py  memory_store.py  postgres_store.py  sqlite_store.py
wrp/server/runtime/system_sessions/: types.py
wrp/server/runtime/telemetry/: __init__.py  events.py  service.py  views.py
wrp/server/runtime/telemetry/payloads/: __init__.py  types.py
wrp/server/runtime/workflows/: __init__.py  base.py  settings.py  types.py  workflow_manager.py
wrp/shared/: _httpx_utils.py  context.py  exceptions.py  message.py  session.py  version.py
(+13 files in other folders)
