# pyproject.toml

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wrp-python"
version = "0.1.0a1" # alpha/WIP tag so expectations are clear
description = "WRP server/runtime (WIP)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Iheb Salah" }]
requires-python = ">=3.10"
urls = { "Source" = "https://github.com/ihebsalah/wrp-python" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "mcp==1.21.1",
  "httpx>=0.28.1",
  "anyio>=4.11.0",
  "uvicorn>=0.38.0",
  "starlette>=0.50.0",
  "pydantic>=2.12.4",
  "cryptography>=46.0.3",
  "jsonschema>=4.25.1",
  "psycopg>=3.2.12",
  "openai-agents>=0.5.1",
]

[tool.setuptools.packages.find]
include = ["wrp", "wrp.*"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE", "NOTICE", "TRADEMARKS.md", "authors"]

[project.optional-dependencies]
dev = [
]